--- a/index.html
+++ b/index.html
@@ -13,118 +13,115 @@
             <div class="salamImageContainer">
                 <div class="swing">
                     <div class="ball" id="woolBall"></div>
-                    </div>
+                </div>
                 <img src="./public/img/dogline.png" alt="intro image" class="salamImg" id="salamImg">
                 <div class="tail" id="tail"></div>
                 <div id="blackboard" class="blackboard">
                     <button class="close-btn">X</button>
                     <div class="text1">Are you gonna hire her, Human?</div>
-                <div class="radio-container">
-                    <div class="radio-wrapper-62">
-                        <input type="radio" class="radio" id="radio1-62" name="option" value="yes"/>
-                        <label for="radio1-62" class="label">
-                          <svg width="43" height="43" viewBox="0 0 90 90">
-                            <rect x="30" y="20" width="50" height="50" stroke="white" fill="none" />
-                            <g transform="translate(0,-952.36218)">
-                              <path d="m 13,983 c 33,6 40,26 55,48 " stroke="white" stroke-width="3" class="path1" fill="none" />
-                              <path d="M 75,970 C 51,981 34,1014 25,1031 " stroke="white" stroke-width="3" class="path1" fill="none" />
-                            </g>
-                          </svg>
-                          <span>Yes</span>
-                        </label>
-                      </div>
+                    <div class="radio-container">
+                        <div class="radio-wrapper-62">
+                            <input type="radio" class="radio" id="radio1-62" name="option" value="yes"/>
+                            <label for="radio1-62" class="label">
+                              <svg width="43" height="43" viewBox="0 0 90 90">
+                                <rect x="30" y="20" width="50" height="50" stroke="white" fill="none" />
+                                <g transform="translate(0,-952.36218)">
+                                  <path d="m 13,983 c 33,6 40,26 55,48 " stroke="white" stroke-width="3" class="path1" fill="none" />
+                                  <path d="M 75,970 C 51,981 34,1014 25,1031 " stroke="white" stroke-width="3" class="path1" fill="none" />
+                                </g>
+                              </svg>
+                              <span>Yes</span>
+                            </label>
+                        </div>
                       
-                      <div class="radio-wrapper-62">
-                        <input type="radio" class="radio" id="radio2-62" name="option" value="no"/>
-                        <label for="radio2-62" class="label">
-                          <svg width="43" height="43" viewBox="0 0 90 90">
-                            <rect x="30" y="20" width="50" height="50" stroke="white" fill="none" />
-                            <g transform="translate(0,-952.36218)">
-                              <path d="m 13,983 c 33,6 40,26 55,48 " stroke="white" stroke-width="3" class="path1" fill="none" />
-                              <path d="M 75,970 C 51,981 34,1014 25,1031 " stroke="white" stroke-width="3" class="path1" fill="none" />
-                            </g>
-                          </svg>
-                          <span>No</span>
-                        </label>
-                      </div>
-                </div>
+                        <div class="radio-wrapper-62">
+                            <input type="radio" class="radio" id="radio2-62" name="option" value="no"/>
+                            <label for="radio2-62" class="label">
+                              <svg width="43" height="43" viewBox="0 0 90 90">
+                                <rect x="30" y="20" width="50" height="50" stroke="white" fill="none" />
+                                <g transform="translate(0,-952.36218)">
+                                  <path d="m 13,983 c 33,6 40,26 55,48 " stroke="white" stroke-width="3" class="path1" fill="none" />
+                                  <path d="M 75,970 C 51,981 34,1014 25,1031 " stroke="white" stroke-width="3" class="path1" fill="none" />
+                                </g>
+                              </svg>
+                              <span>No</span>
+                            </label>
+                        </div>
+                    </div>
+                </div> <!-- Close the blackboard div here -->
             </div>
-                </div>
             <div class="salamTextContainer">
                 <h1 class="salamTxt">salam</h1>
             </div>
         </div>
-          <div class="nameContainer">
+        <div class="nameContainer">
            <h2 class="name">I'm Mahshid</h2>
-          </div>
-          <div class="jobTitleContainer first">
-            <h2 class="jobTitle">Full-stack web developer</h2>
-          </div>
-          <div class="jobTitleContainer second">
-            <h2 class="jobTitle">and a designer</h2>
-          </div>
         </div>
-             <div class="projects">
-               <h1 class="projectsTitle">Check out my work</h1>
-               
-               <div class="project">
-                <div class="phone">
-                    <img src="./public/img/phone.png" alt="">
-                    <div class="phoneScreen">
-                        <img src="./public/img/phoneApp.png" alt="" class="phoneFirst">
-                    </div>
-                </div>
-                   <div class="projectDetail">
-                    <h1 class="projectTitle">Help me</h1>
-                    <p class="projectDesc">
-                        An android App for helping people,
-                        Whether you're seeking assistance or offering a helping hand,
-                        our app brings people together to solve everyday challenges. 
-                        With diverse categories to post your needs, and a messenger to communicate, and share location.
-                    </p>
-                    <a  href="https://github.com/mahshidasadollahi" class="projectButton">Learn more</a>
+        <div class="jobTitleContainer first">
+            <h2 class="jobTitle">Full-stack web developer</h2>
+        </div>
+        <div class="jobTitleContainer second">
+            <h2 class="jobTitle">and a designer</h2>
+        </div>
+      </div>
+      <div class="projects">
+        <h1 class="projectsTitle">Check out my work</h1>
+        <div class="project">
+            <div class="phone">
+                <img src="./public/img/phone.png" alt="">
+                <div class="phoneScreen">
+                    <img src="./public/img/phoneApp.png" alt="" class="phoneFirst">
                 </div>
             </div>
-
-            <div class="project">
-                <div class="laptop">
-                    <img src="./public/img/laptop.png" alt="">
-                    <div class="laptopScreen">
-                        <img src="./public/img/laptopApp.png" alt="" class="laptopFirst">
-                    </div>
+            <div class="projectDetail">
+                <h1 class="projectTitle">Help me</h1>
+                <p class="projectDesc">
+                    An android App for helping people,
+                    Whether you're seeking assistance or offering a helping hand,
+                    our app brings people together to solve everyday challenges. 
+                    With diverse categories to post your needs, and a messenger to communicate, and share location.
+                </p>
+                <a href="https://github.com/mahshidasadollahi" class="projectButton">Learn more</a>
+            </div>
+        </div>
+        <div class="project">
+            <div class="laptop">
+                <img src="./public/img/laptop.png" alt="">
+                <div class="laptopScreen">
+                    <img src="./public/img/laptopApp.png" alt="" class="laptopFirst">
                 </div>
-                   <div class="projectDetail">
-                    <h1 class="projectTitle">Zigi Bakery</h1>
-                    <p class="projectDesc">
+            </div>
+            <div class="projectDetail">
+                <h1 class="projectTitle">Zigi Bakery</h1>
+                <p class="projectDesc">
                     Bakery website where users can order bread and desserts.
                     It includes an admin dashboard for managing the bakery as well.
-                    </p>
-                    <a href="https://zigi-bakeryy.vercel.app/" class="projectButton">Learn more</a>
+                </p>
+                <a href="https://zigi-bakeryy.vercel.app/" class="projectButton">Learn more</a>
+            </div>
+        </div>
+        <div class="project">
+            <div class="laptop">
+                <img src="./public/img/laptop.png" alt="">
+                <div class="laptopScreen">
+                    <img src="./public/img/laptopApp2.png" alt="" class="laptopFirst">
                 </div>
             </div>
-
-            <div class="project">
-                <div class="laptop">
-                    <img src="./public/img/laptop.png" alt="">
-                    <div class="laptopScreen">
-                        <img src="./public/img/laptopApp2.png" alt="" class="laptopFirst">
-                    </div>
-                </div>
-                   <div class="projectDetail">
-                    <h1 class="projectTitle">Fit gym</h1>
-                    <p class="projectDesc">
-                        Gym website to get free plans and workout plans for users.
-                    </p>
-                    <a href="https://fitgym.life" class="projectButton">Learn more</a>
-                </div>
+            <div class="projectDetail">
+                <h1 class="projectTitle">Fit gym</h1>
+                <p class="projectDesc">
+                    Gym website to get free plans and workout plans for users.
+                </p>
+                <a href="https://fitgym.life" class="projectButton">Learn more</a>
             </div>
-          </div>
-          <div id="light"></div>
-        <div class="githubContainer">
-            <div class="githubSection">
-                <h1 class="githubText">Find me on Github</h1>
-                <button id="hintButton">HINT</button>
-                <div class="eyes">
+        </div>
+      </div>
+      <div id="light"></div>
+      <div class="githubContainer">
+        <div class="githubSection">
+            <h1 class="githubText">Find me on Github</h1>
+            <button id="hintButton">HINT</button>
+            <div class="eyes">
                 <div><i></i></div>
                 <div><i></i></div>
             </div>
@@ -147,8 +144,8 @@
                 <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw rightPaw" style="top: 500px; left: 770px; rotate: 110deg; animation-delay: 6s;">
                 <img src="./public/img/fishbone.png" alt="fishbone" class="fishbone" style="top: 360px; left: 880px; rotate: 165deg; animation-delay: 6.5s;">
             </div>
-            </div>
         </div>
+      </div>
     </div>
     <script src="./app.js"></script>
   
