--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             </label>
                         </div>
                     </div>
-                </div> <!-- Close the blackboard div here -->
+                </div>
             </div>
             <div class="salamTextContainer">
                 <h1 class="salamTxt">salam</h1>
@@ -124,25 +124,8 @@
                 <div><i></i></div>
                 <div><i></i></div>
             </div>
-            <a href="https://github.com/mahshidasadollahi" class="githubLink">
-                <img src="./public/img/gitcat.png" alt="github" class="githubImg">
-            </a>
-            <div class="catPaws">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw leftPaw" style="top: 0; left: 0; animation-delay: 0s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw rightPaw" style="top: 0px; left: 75px; animation-delay: 0.5s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw leftPaw" style="top: 90px; left: 70px; rotate: 150deg; animation-delay: 1s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw rightPaw" style="top: 120px; left: 170px; rotate: 150deg; animation-delay: 1.5s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw leftPaw" style="top: 220px; left: 150px; animation-delay: 2s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw rightPaw" style="top: 230px; left: 250px; animation-delay: 2.5s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw leftPaw" style="top: 320px; left: 240px; rotate: 150deg; animation-delay: 3s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw rightPaw" style="top: 320px; left: 350px; animation-delay: 3.5s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw leftPaw" style="top: 440px; left: 340px; rotate: 120deg; animation-delay: 4s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw rightPaw" style="top: 380px; left: 490px; rotate: 120deg; animation-delay: 4.5s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw rightPaw" style="top: 490px; left: 560px; rotate: 110deg; animation-delay: 5s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw rightPaw" style="top:400px; left: 670px; rotate: 120deg; animation-delay: 5.5s;">
-                <img src="./public/img/catpaw.png" alt="cat paw" class="catPaw rightPaw" style="top: 500px; left: 770px; rotate: 110deg; animation-delay: 6s;">
-                <img src="./public/img/fishbone.png" alt="fishbone" class="fishbone" style="top: 360px; left: 880px; rotate: 165deg; animation-delay: 6.5s;">
-            </div>
+            <canvas id="scratchCard" width="300" height="100"></canvas>
+            <div id="scratchText" class="hidden">github.com/MahshidAsadollahi</div>
         </div>
       </div>
     </div>
