--- a/index.html
+++ b/index.html
@@ -11,44 +11,7 @@
       <div class="intro">
         <div class="salam">
             <div class="salamImageContainer">
-                <div class="swing">
-                    <div class="ball" id="woolBall"></div>
-                </div>
                 <img src="./public/img/dogline.png" alt="intro image" class="salamImg" id="salamImg">
-                <div class="tail" id="tail"></div>
-                <div id="blackboard" class="blackboard">
-                    <button class="close-btn">X</button>
-                    <div class="text1">Are you gonna hire her, Human?</div>
-                    <div class="radio-container">
-                        <div class="radio-wrapper-62">
-                            <input type="radio" class="radio" id="radio1-62" name="option" value="yes"/>
-                            <label for="radio1-62" class="label">
-                              <svg width="43" height="43" viewBox="0 0 90 90">
-                                <rect x="30" y="20" width="50" height="50" stroke="white" fill="none" />
-                                <g transform="translate(0,-952.36218)">
-                                  <path d="m 13,983 c 33,6 40,26 55,48 " stroke="white" stroke-width="3" class="path1" fill="none" />
-                                  <path d="M 75,970 C 51,981 34,1014 25,1031 " stroke="white" stroke-width="3" class="path1" fill="none" />
-                                </g>
-                              </svg>
-                              <span>Yes</span>
-                            </label>
-                        </div>
-                      
-                        <div class="radio-wrapper-62">
-                            <input type="radio" class="radio" id="radio2-62" name="option" value="no"/>
-                            <label for="radio2-62" class="label">
-                              <svg width="43" height="43" viewBox="0 0 90 90">
-                                <rect x="30" y="20" width="50" height="50" stroke="white" fill="none" />
-                                <g transform="translate(0,-952.36218)">
-                                  <path d="m 13,983 c 33,6 40,26 55,48 " stroke="white" stroke-width="3" class="path1" fill="none" />
-                                  <path d="M 75,970 C 51,981 34,1014 25,1031 " stroke="white" stroke-width="3" class="path1" fill="none" />
-                                </g>
-                              </svg>
-                              <span>No</span>
-                            </label>
-                        </div>
-                    </div>
-                </div>
             </div>
             <div class="salamTextContainer">
                 <h1 class="salamTxt">salam</h1>
@@ -120,6 +83,7 @@
         <div class="githubSection">
             <h1 class="githubText">Find me on Github</h1>
             <button id="hintButton">HINT</button>
+            <div id="hintMessage" class="hidden">Start scratching the barcode</div>
             <div class="eyes">
                 <div><i></i></div>
                 <div><i></i></div>
